centered header, dark-mode added to new about page, buttons made resoponsive + some bugs / fixes in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,6 +57,9 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --blue-400: 217, 91%, 60%;
+    --blue-500: 217, 79%, 53%;
   }
 
   .dark {
@@ -118,7 +121,17 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.text-link {
+  text-decoration: underline;
+  color: hsla(var(--blue-400), 0.8);
+}
+
+.text-link:hover {
+  color: hsla(var(--blue-400), 0.8);
 }
